specs/requests/valid/018.http
GET /first HTTP/1.1



GET /second HTTP/1.1


