specs/requests/invalid/003.http
-blargh /foo HTTP/1.1


